--- a/yt/play.html
+++ b/yt/play.html
@@ -6,15 +6,9 @@
 </head>
 <body style="overflow:hidden; margin:0;">
   <script type="text/javascript">
-    function add(ytUrl) {
-      document.body.innerHTML = '<iframe id="video" src="//www.youtube.com/embed/' + ytUrl + '?autoplay=1" frameborder="0" allowfullscreen></iframe>' + document.body.innerHTML;
-      $(function(){$('#video').css({ width: $(window).innerWidth() + "px", height: $(window).innerHeight() + "px" });$(window).resize(function(){$('#video').css({ width: $(window).innerWidth() + "px", height: $(window).innerHeight() + "px" });});}); // did you know i found this line of code in a stack overflow thing?
-      
-    }
   const url = new URL(window.location.href);
   var afterq = url.search.substring(1);
-  add(afterq)
-  console.log(afterq)
+  window.location.href = "//functionalmetatable.github.io/projects/player/ytfs?v=" + afterq
   </script>
 </body>
 </html>
